--- a/app/web/static/css/styles.css
+++ b/app/web/static/css/styles.css
@@ -84,3 +84,17 @@ button:hover {
     width: 100%;
   }
 }
+
+.button-group {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+#feeling-lucky {
+  background-color: #34a853;
+}
+
+#feeling-lucky:hover {
+  background-color: #2d9248;
+}
