--- a/app/web/templates/scenario_select.html
+++ b/app/web/templates/scenario_select.html
@@ -16,7 +16,15 @@
           id="scenario-prompt"
           placeholder="Describe the type of Kubernetes scenario you want to practice..."
         ></textarea>
-        <button id="generate-scenarios">Generate Scenarios</button>
+        <div class="button-group">
+          <button id="generate-scenarios">Generate Scenarios</button>
+          <button
+            id="feeling-lucky"
+            title="Let the AI generate scenarios randomly"
+          >
+            I'm feeling (p)lucky
+          </button>
+        </div>
       </div>
       <div id="scenario-list"></div>
     </div>
